force-app/main/default/objects/Account/fields/Account_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Active_Date__c</fullName>
    <label>Account Active Date</label>
    <type>DateTime</type>
</CustomField>