force-app/main/default/objects/Account/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <description>Account address formula for mobile search results</description>
    <formula>ShippingStreet + &apos; &apos; + ShippingCity + &apos; &apos; + ShippingState + &apos;, &apos; + ShippingPostalCode + &apos; &apos; + ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>