force-app/main/default/objects/Account/fields/Account_Alert__c.field-meta.xml
<CustomField>
    <fullName>Account_Alert__c</fullName>
    <description>To enter alerts related to Accounts</description>
    <label>Account Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>