force-app/main/default/objects/Account/fields/Account_Assign_Override__c.field-meta.xml
<CustomField>
    <fullName>Account_Assign_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Assign Override</label>
    <type>Checkbox</type>
</CustomField>