force-app/main/default/objects/Account/fields/Account_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Status__c</fullName>
    <description>Displays credit status of Customer Account (Bill To).</description>
    <formula>if(or (text(Credit_Status__c) = &quot;HOLD&quot;),
IMAGE(&quot;https://cleanharbors--c.na54.content.force.com/servlet/servlet.FileDownload?file=0150a000002ebac&quot;, &quot;Hold&quot;),
text(Credit_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays credit status of Customer Account (Bill To).</inlineHelpText>
    <label>Account Credit Status</label>
    <type>Text</type>
</CustomField>