force-app/main/default/objects/Account/fields/Account_Headline__c.field-meta.xml
<CustomField>
    <fullName>Account_Headline__c</fullName>
	<description>This field is used to show the banner on account record page.</description>
    <label>Account Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>