force-app/main/default/objects/Account/fields/Account_Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CASESAFEID(Id), Name, &quot;_self&quot;)</formula>
    <label>Account Name Hyperlink</label>
    <type>Text</type>
</CustomField>