force-app/main/default/objects/Account/fields/Account_Owner_Sales_Branch__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Sales_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Service Branch for the account</description>
    <inlineHelpText>Primary Service Branch responsible for account</inlineHelpText>
    <label>Account Owner Sales Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Primary Service Branch)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>