force-app/main/default/objects/Account/fields/Account_Phone_Number_Verified__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Phone Number Verified</label>
    <type>Checkbox</type>
</CustomField> 