force-app/main/default/objects/Account/fields/Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Address__c</fullName>
    <formula>BillingStreet + &apos; &apos; + BillingCity + &apos; &apos; + BillingState + &apos;, &apos; + BillingPostalCode + &apos; &apos; + BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping Address</label>
    <type>Text</type>
</CustomField>