force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Show if expired, prospect or committed</description>
    <formula>if( Expired__c = TRUE ,
IMAGE(&quot;https://cleanharbors--chfull--c.documentforce.com/servlet/servlet.FileDownload?file=0150a000002ebaI&quot;, &quot;Archived&quot;)
,

if (TEXT(Status__c )= &quot;Inactive&quot;,
IMAGE(&quot;https://cleanharbors--chfull--c.documentforce.com/servlet/servlet.FileDownload?file=0150c000003nGaY&quot;, &quot;Inactive&quot;)
,
text(Cycle__c)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>