force-app/main/default/objects/Account/fields/Accounts_with_WINID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_with_WINID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for handling Cases on Account Create/update. This checkbox will be TRUE for accounts for which WINID is generated in Salesforce. (RFO, Competitor)</description>
    <label>Accounts with WINID</label>
    <type>Checkbox</type>
</CustomField>