force-app/main/default/objects/Account/fields/Active_ER_Contract__c.field-meta.xml
<CustomField>
    <fullName>Active_ER_Contract__c</fullName>
    <defaultValue>false</defaultValue> 
    <label>Active ER Contract</label>
    <type>Checkbox</type>
</CustomField> 