force-app/main/default/objects/Account/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <description>Beacon Address ID</description>
    <label>Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>