force-app/main/default/objects/Account/fields/ADP__c.field-meta.xml
<CustomField>
    <fullName>ADP__c</fullName>
    <description>Average Days to Pay</description>
    <label>ADP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>