force-app/main/default/objects/Account/fields/AI_Probability__c.field-meta.xml
<CustomField>
    <fullName>AI_Probability__c</fullName>
    <label>AI Probability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>