force-app/main/default/objects/Account/fields/Alert_Expired__c.field-meta.xml
<CustomField>
    <fullName>Alert_Expired__c</fullName>
    <description>Checkbox to indicate that the Alert expired</description>
    <formula>IF(RecordType.Name = &apos;Corporate&apos;, Expires_On__c &lt;= TODAY() ,
IF(RecordType.Name = &apos;Customer Location&apos;, Key_Alert_Expires_On__c &lt;= TODAY(),
IF(RecordType.Name = &apos;Customer&apos;, Key_Alert_Expires_On__c &lt;= TODAY(), NULL )))</formula>
    <label>Alert Expired</label>
    <type>Checkbox</type>
</CustomField>