force-app/main/default/objects/Account/fields/Alternate_names__c.field-meta.xml
<CustomField>
    <fullName>Alternate_names__c</fullName>
    <label>Alternate names</label>
    <length>200</length>
    <type>Text</type>
</CustomField>