force-app/main/default/objects/Account/fields/Annual_RFO_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Annual_RFO_Gallons__c</fullName>
    <label>Annual RFO Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>