force-app/main/default/objects/Account/fields/Annual_UMO_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Annual_UMO_Gallons__c</fullName>
    <label>Annual UMO Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>