force-app/main/default/objects/Account/fields/AP_Contact_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact_Verified_Date__c</fullName>
    <label>AP Contact Verified Date</label>
    <type>DateTime</type>
</CustomField>