force-app/main/default/objects/Account/fields/AR_31_60__c.field-meta.xml
<CustomField>
    <fullName>AR_31_60__c</fullName>
    <label>AR 31-60</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>