force-app/main/default/objects/Account/fields/AR_61_90__c.field-meta.xml
<CustomField>
    <fullName>AR_61_90__c</fullName>
    <label>AR 61-90</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>