force-app/main/default/objects/Account/fields/AR_91_120__c.field-meta.xml
<CustomField>
    <fullName>AR_91_120__c</fullName>
    <label>AR 91-120</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>