force-app/main/default/objects/Account/fields/AR_91_180_Days__c.field-meta.xml
<CustomField>
    <fullName>AR_91_180_Days__c</fullName>
    <label>AR 91-180 Days</label>
    <summarizedField>Accounts_Receivable__c.AR_91_180__c</summarizedField>
    <summaryForeignKey>Accounts_Receivable__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>