force-app/main/default/objects/Account/fields/AR_Current__c.field-meta.xml
<CustomField>
    <fullName>AR_Current__c</fullName>
    <label>AR Current</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>