force-app/main/default/objects/Account/fields/AR_Dummy__c.field-meta.xml
<CustomField>
    <fullName>AR_Dummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Dummy</label>
    <type>Checkbox</type>
</CustomField>