force-app/main/default/objects/Account/fields/AR_OA__c.field-meta.xml
<CustomField>
    <fullName>AR_OA__c</fullName>
    <label>AR OA</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>