force-app/main/default/objects/Account/fields/AR_OC__c.field-meta.xml
<CustomField>
    <fullName>AR_OC__c</fullName>
    <label>AR OC</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>