force-app/main/default/objects/Account/fields/AR_Over_121__c.field-meta.xml
<CustomField>
    <fullName>AR_Over_121__c</fullName>
    <label>AR Over 121</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>