force-app/main/default/objects/Account/fields/AR_Total__c.field-meta.xml
<CustomField>
    <fullName>AR_Total__c</fullName>
    <label>AR Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>