force-app/main/default/objects/Account/fields/AR_Total_Due__c.field-meta.xml
<CustomField>
    <fullName>AR_Total_Due__c</fullName>
    <label>AR Total Due</label>
    <summarizedField>Accounts_Receivable__c.AR_Total__c</summarizedField>
    <summaryForeignKey>Accounts_Receivable__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>