force-app/main/default/objects/Account/fields/AR_Total_Due_Backend__c.field-meta.xml
<CustomField>
    <fullName>AR_Total_Due_Backend__c</fullName>
    <description>This field is used to Display AR Totals on Search Layout</description>
    <formula>IF(RecordType.Name = &apos;Corporate&apos;, AR_Total_Due_Corp__c , AR_Total_Due__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>