force-app/main/default/objects/Account/fields/AR_Total_Due_Corp__c.field-meta.xml
<CustomField>
    <fullName>AR_Total_Due_Corp__c</fullName>
    <description>Calculate AR Total Due on Corp from its child Accounts</description>
    <label>AR Total Due Corp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>