force-app/main/default/objects/Account/fields/Assigned_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_ID__c</fullName>
    <description>Beacon Assigned ID</description>
    <label>Assigned ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>