force-app/main/default/objects/Account/fields/Audit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Audit_Account_Name__c</fullName>
    <label>Audit Account Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>