force-app/main/default/objects/Account/fields/Audit_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Audit_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auditing Account Owner</description>
    <label>Audit Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsBli3</relationshipName>
    <type>Lookup</type>
</CustomField>