force-app/main/default/objects/Account/fields/Audit_Avention_company_record_not_found__c.field-meta.xml
<CustomField>
    <fullName>Audit_Avention_company_record_not_found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Avention company record not found</label>
    <type>Checkbox</type>
</CustomField>