force-app/main/default/objects/Account/fields/Audit_Avention_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_Avention_ID__c</fullName>
    <label>Audit Avention ID</label>
    <type>TextArea</type>
</CustomField>