force-app/main/default/objects/Account/fields/Audit_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Audit_Billing_Address__c</fullName>
    <label>Audit Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>