force-app/main/default/objects/Account/fields/Audit_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Audit_Billing_City__c</fullName>
    <label>Audit Billing City</label>
    <type>TextArea</type>
</CustomField>