force-app/main/default/objects/Account/fields/Audit_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Audit_Billing_Country__c</fullName>
    <label>Audit Billing Country</label>
    <type>TextArea</type>
</CustomField>