force-app/main/default/objects/Account/fields/Audit_Billing_Expired__c.field-meta.xml
<CustomField>
    <fullName>Audit_Billing_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Billing Expired</label>
    <type>Checkbox</type>
</CustomField>