force-app/main/default/objects/Account/fields/Audit_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Audit_Billing_Postal_Code__c</fullName>
    <label>Audit Billing Postal Code</label>
    <type>TextArea</type>
</CustomField>