force-app/main/default/objects/Account/fields/Audit_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Audit_Billing_State__c</fullName>
    <label>Audit Billing State</label>
    <type>TextArea</type>
</CustomField>