force-app/main/default/objects/Account/fields/Audit_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Audit_Billing_Street__c</fullName>
    <label>Audit Billing Street</label>
    <type>TextArea</type>
</CustomField>