force-app/main/default/objects/Account/fields/Audit_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Business_Type__c</fullName>
    <label>Audit Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Locating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>