force-app/main/default/objects/Account/fields/Audit_Chain_Account__c.field-meta.xml
<CustomField>
    <fullName>Audit_Chain_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Chain Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Audit Chain Account)</relationshipLabel>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>