force-app/main/default/objects/Account/fields/Audit_Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Audit_Corporate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Corporate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Audit Corporate Account)</relationshipLabel>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>