force-app/main/default/objects/Account/fields/Audit_Corporate_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_Corporate_Account_ID__c</fullName>
    <description>Corp Account ID 18</description>
    <label>Audit Corporate Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>