force-app/main/default/objects/Account/fields/Audit_Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Audit_Corporate_Address__c</fullName>
    <label>Audit Corporate Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>