force-app/main/default/objects/Account/fields/Audit_Division__c.field-meta.xml
<CustomField>
    <fullName>Audit_Division__c</fullName>
    <label>Audit Division</label>
    <type>TextArea</type>
</CustomField>