force-app/main/default/objects/Account/fields/Audit_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_EPA_ID__c</fullName>
    <label>Audit EPA ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>