force-app/main/default/objects/Account/fields/Audit_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Expired_Date__c</fullName>
    <description>Audit Expired Date</description>
    <label>Audit Expired Date</label>
    <type>DateTime</type>
</CustomField>