force-app/main/default/objects/Account/fields/Audit_fields_check__c.field-meta.xml
<CustomField>
    <fullName>Audit_fields_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit fields check</label>
    <type>Checkbox</type>
</CustomField>