force-app/main/default/objects/Account/fields/Audit_Generator_Status__c.field-meta.xml
<CustomField>
    <fullName>Audit_Generator_Status__c</fullName>
    <defaultValue>Null</defaultValue>
    <label>Audit Generator Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Quantity Generator</fullName>
            </value>
            <value>
                <fullName>Small Quantity Generator</fullName>
            </value>
            <value>
                <fullName>Conditionally Exempt Sm Qty Generator</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>