force-app/main/default/objects/Account/fields/Audit_GenReg_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_GenReg_Id__c</fullName>
    <label>Audit GenReg Id</label>
    <type>TextArea</type>
</CustomField>