force-app/main/default/objects/Account/fields/Audit_Insite__c.field-meta.xml
<CustomField>
    <fullName>Audit_Insite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Insite</label>
    <type>Checkbox</type>
</CustomField>