force-app/main/default/objects/Account/fields/Audit_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Audit_Lost_Reason__c</fullName>
    <description>Audit Lost Reason</description>
    <label>Audit Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduped</fullName>
            </value>
            <value>
                <fullName>Duplicate Name</fullName>
            </value>
            <value>
                <fullName>Home Owner</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Location Closed</fullName>
            </value>
            <value>
                <fullName>One time FS Event</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Poor Payment History</fullName>
            </value>
            <value>
                <fullName>Company Bought Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>