force-app/main/default/objects/Account/fields/Audit_Manifest_City__c.field-meta.xml
<CustomField>
    <fullName>Audit_Manifest_City__c</fullName>
    <label>Audit Manifest City</label>
    <type>TextArea</type>
</CustomField>