force-app/main/default/objects/Account/fields/Audit_Manifest_Country__c.field-meta.xml
<CustomField>
    <fullName>Audit_Manifest_Country__c</fullName>
    <label>Audit Manifest Country</label>
    <type>TextArea</type>
</CustomField>