force-app/main/default/objects/Account/fields/Audit_Manifest_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Audit_Manifest_Postal_Code__c</fullName>
    <label>Audit Manifest Postal Code</label>
    <type>TextArea</type>
</CustomField>