force-app/main/default/objects/Account/fields/Audit_Manifest_State__c.field-meta.xml
<CustomField>
    <fullName>Audit_Manifest_State__c</fullName>
    <label>Audit Manifest State</label>
    <type>TextArea</type>
</CustomField>