force-app/main/default/objects/Account/fields/Audit_Manifest_Street1__c.field-meta.xml
<CustomField>
    <fullName>Audit_Manifest_Street1__c</fullName>
    <label>Audit Manifest Street1</label>
    <type>TextArea</type>
</CustomField>