force-app/main/default/objects/Account/fields/Audit_Manifest_Street2__c.field-meta.xml
<CustomField>
    <fullName>Audit_Manifest_Street2__c</fullName>
    <label>Audit Manifest Street2</label>
    <type>TextArea</type>
</CustomField>