force-app/main/default/objects/Account/fields/Audit_Rank__c.field-meta.xml
<CustomField>
    <fullName>Audit_Rank__c</fullName>
    <label>Audit Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CH A Large &gt;200K</fullName>
            </value>
            <value>
                <fullName>SK B Bronze</fullName>
            </value>
            <value>
                <fullName>CH C Assigned &gt;30K</fullName>
            </value>
            <value>
                <fullName>D &lt;30,000</fullName>
            </value>
            <value>
                <fullName>CH E Small &lt;30K</fullName>
            </value>
            <value>
                <fullName>SK PE Platinum Elite</fullName>
            </value>
            <value>
                <fullName>SK PR Platinum Revenue</fullName>
            </value>
            <value>
                <fullName>SK PO Platinum Oil</fullName>
            </value>
            <value>
                <fullName>SK S Silver</fullName>
            </value>
            <value>
                <fullName>SK U Undefined</fullName>
            </value>
            <value>
                <fullName>SK GE Gold Elite</fullName>
            </value>
            <value>
                <fullName>SK GH Gold High Penetration</fullName>
            </value>
            <value>
                <fullName>SK GL Gold Low Penetration</fullName>
            </value>
            <value>
                <fullName>SK O Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>