force-app/main/default/objects/Account/fields/Audit_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Audit_Shipping_City__c</fullName>
    <label>Audit Shipping City</label>
    <type>TextArea</type>
</CustomField>