force-app/main/default/objects/Account/fields/Audit_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Audit_Shipping_Country__c</fullName>
    <label>Audit Shipping Country</label>
    <type>TextArea</type>
</CustomField>