force-app/main/default/objects/Account/fields/Audit_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Audit_Shipping_Postal_Code__c</fullName>
    <label>Audit Shipping Postal Code</label>
    <type>TextArea</type>
</CustomField>