force-app/main/default/objects/Account/fields/Audit_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Audit_Shipping_State__c</fullName>
    <label>Audit Shipping State</label>
    <type>TextArea</type>
</CustomField>