force-app/main/default/objects/Account/fields/Audit_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Audit_Shipping_Street__c</fullName>
    <label>Audit Shipping Street</label>
    <type>TextArea</type>
</CustomField>