force-app/main/default/objects/Account/fields/Audit_Sic_code__c.field-meta.xml
<CustomField>
    <fullName>Audit_Sic_code__c</fullName>
    <label>Audit Sic code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>