force-app/main/default/objects/Account/fields/Audit_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Site_Id__c</fullName>
    <label>Audit Site Id</label>
    <type>TextArea</type>
</CustomField>