force-app/main/default/objects/Account/fields/Audit_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Audit_Vertical__c</fullName>
    <label>Audit Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Base Oil, Blender, Packager, or Marketer</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Chemical - Distributor</fullName>
            </value>
            <value>
                <fullName>Construction - Building Related Trades</fullName>
            </value>
            <value>
                <fullName>Corp RE</fullName>
            </value>
            <value>
                <fullName>Drill Rig Owner</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Electronics Manufacturing</fullName>
            </value>
            <value>
                <fullName>Emergency Response Management Company</fullName>
            </value>
            <value>
                <fullName>Engineering, Consulting - Drilling</fullName>
            </value>
            <value>
                <fullName>Engineering, Consulting - Oilsands</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Seismic &amp; Production</fullName>
            </value>
            <value>
                <fullName>Engineering and Consulting - Utilities</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Consulting - Environmental</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Consulting - Heavy Construction</fullName>
            </value>
            <value>
                <fullName>Exploration - Drilling</fullName>
            </value>
            <value>
                <fullName>Exploration - Seismic</fullName>
            </value>
            <value>
                <fullName>Fabricated Metal Products</fullName>
            </value>
            <value>
                <fullName>Furniture Manufacturing</fullName>
            </value>
            <value>
                <fullName>Government - Federal</fullName>
            </value>
            <value>
                <fullName>Government - State/Provincial</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lease Operator</fullName>
            </value>
            <value>
                <fullName>Machinery Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining &amp; Primary Metals</fullName>
            </value>
            <value>
                <fullName>Natural Gas Processing &amp; Pipelines</fullName>
            </value>
            <value>
                <fullName>Oil Dealers - Heating Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>